@@ -9,6 +9,7 @@ Release History:
 Version 1.50 - Jul 24, 2010
     - changed layout to common cpan module style
     - seperated module into gui and core
+    - added make target for webinjectgui.pl
 
 Version 1.41 - Jan 4, 2006
     - Added ability to add multiple HTTP Headers within an 'addheader' testcase parameter
